Alteração em um paragrafo no index.html e no alinhamento desse paragrafo no styles.css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="wrapper">
         <section class="container-left">
             <h1>Easy Shopping Via Mobile</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur  adipiscing elit. Donec lorem justo, sollicitudin vel ultricies sed, eleifend nec metus. Etiam vitae pellentesque dolor.</p>
+            <p>Easy Shopping Via Mobile offers a convenient, user-friendly experience for shopping on the go. With seamless navigation, users can browse, compare, and purchase products quickly. It’s the perfect solution for busy individuals who want to shop anytime, anywhere.</p>
             <button>Get Started</button>
         </section>
 
