--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Easy Shopping Mobile</title>
+    <title>Easy Shopping Mobile (Projeto)</title>
 </head>
 <body>
 
     <div class="wrapper">
         <section class="container-left">
-            <h1>Easy Shopping Via Mobile (Projeto)</h1>
+            <h1>Easy Shopping Via Mobile</h1>
             <p>Easy Shopping Via Mobile offers a convenient, user-friendly experience for shopping on the go. With seamless navigation, users can browse, compare, and purchase products quickly. It’s the perfect solution for busy individuals who want to shop anytime, anywhere.</p>
             <button>Get Started</button>
         </section>
